Casino/src/objects/Game__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Games_Played__c</fullName>
        <label>Games Played</label>
        <summaryForeignKey>Result__c.Game__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Profit_Loss__c</fullName>
        <label>Profit/Loss</label>
        <summarizedField>Result__c.Gain_Loss__c</summarizedField>
        <summaryForeignKey>Result__c.Game__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Game</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Games_Played__c</columns>
        <columns>Profit_Loss__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Game Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Games</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>